fix scrollbar & input

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "./variables/colors.scss" as *;
 @use "$nodeModules/normalize.css/normalize.css" as *;
 
@@ -88,9 +89,38 @@ html {
 	text-transform: capitalize;
 
 	scrollbar-width: thin;
+	scrollbar-color: color.change($color-gray-900, $alpha: 0.5) transparent;
 }
 
 @supports selector(::-webkit-scrollbar) {
+	* {
+		scrollbar-width: auto;
+		scrollbar-color: unset;
+	}
+
+	::-webkit-scrollbar {
+		width: $space-xs + $space-xxs;
+		height: $space-xs + $space-xxs;
+	}
+
+	/* Track */
+	::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		background: color.change($color-gray-900, $alpha: 0.5);
+		border-radius: 100rem;
+	}
+
+	/* Handle on hover */
+	::-webkit-scrollbar-thumb:hover {
+		background: color.change($color-gray-900, $alpha: 0.6);
+	}
+}
+
+@supports not selector(::-webkit-scrollbar) {
 	* {
 		scrollbar-width: auto;
 	}
@@ -102,18 +132,18 @@ html {
 
 	/* Track */
 	::-webkit-scrollbar-track {
-		background: var(--accent-neutral-50);
+		background: green;
 	}
 
 	/* Handle */
 	::-webkit-scrollbar-thumb {
-		background: var(--accent-neutral-300);
+		background: yellow;
 		border-radius: 100rem;
 	}
 
 	/* Handle on hover */
 	::-webkit-scrollbar-thumb:hover {
-		background: var(--accent-neutral-400);
+		background: blue;
 	}
 }
 
